<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">ZASA</string>

    <string name="btn_continue">Weiter</string>
    <string name="btn_location">Standort</string>
    <string name="btn_submit">Fertig</string>

    <string name="filled_questionnaires">Ausgefüllte Fragebögen</string>

    <string name="heading_grundablass">Grundablass (GA)</string>
    <string name="heading_hochwasserentlastung">Hochwasserentlastung (HWE)</string>
    <string name="heading_messeinrichtungen">Messeinrichtungen (falls vorhanden)</string>
    <string name="heading_veraenderungen_massivbauwerke">Veränderungen an Massivbauwerken</string>

    <string name="lbl_question_abplatzungen">Abplatzungen</string>
    <string name="lbl_question_art_des_absperrbauwerkes">Art des Absperrbauwerkes</string>
    <string name="lbl_question_auswaschungen">Auswaschungen, Ausblühungen</string>
    <string name="lbl_question_beschaedigungen_ga">Fehlstellen, Beschädigungen, Undichtigkeiten</string>
    <string name="lbl_question_beschaedigungen_tosbecken_ga">Fehlstellen, Beschädigungen im Tosbecken</string>
    <string name="lbl_question_beschaedigungen_tosbecken_hwe">Fehlstellen, Beschädigungen im Tosbecken</string>
    <string name="lbl_question_beschaedigungen_wasserwege">Fehlstellen, Beschädigungen an Wasserwegen</string>
    <string name="lbl_question_betriebsvorschrift_hochwasserfall">Betriebsvorschrift Hochwasserfall liegt vor</string>
    <string name="lbl_question_betriebsvorschrift_normalbetrieb">Betriebsvorschrift Normalbetrieb liegt vor</string>
    <string name="lbl_question_bhq1">BHQ₁ (m³/s)</string>
    <string name="lbl_question_bhq2">BHQ₂ (m³/s)</string>
    <string name="lbl_question_bhq2_abschaetzung">Falls BHQ unbekannt, Abschätzung BHQ₂ aus Bild 3 DWA-M522, BHQ₁ ≈ 0,7 ⋅ BHQ₂</string>
    <string name="lbl_question_eigentuemer">Eigentümer/Betreiber</string>
    <string name="lbl_question_erosion_erd">Erosion der wasserseitigen Schutzschicht</string>
    <string name="lbl_question_fehlstellen_grasnarbe">Fehlstellen in der Grasnarbe auf dem Damm</string>
    <string name="lbl_question_fehlstellen_mauerwerk">Fehlstellen im Mauerwerk</string>
    <string name="lbl_question_frei_und_funktionstuechtig">Treibgutsperre/Grobrechen/Palisadenrechen frei und funktionstüchtig</string>
    <string name="lbl_question_gehoelzbewuchs">Gehölzbewuchs ohne Zusatzquerschnitt</string>
    <string name="lbl_question_gewaesser">gestautes Gewässer</string>
    <string name="lbl_question_grabende_tiere">Grabende Tiere</string>
    <string name="lbl_question_hebungen_erd">sichtbare Hebungen</string>
    <string name="lbl_question_hoehe_ueber_gruendung">Höhe über Gründung [m]</string>
    <string name="lbl_question_hoehe_ueber_gelaende">Höhe über Gelände [m]</string>
    <string name="lbl_question_hoehe_oberkante_krone">Höhe Oberkante Krone [m]</string>
    <string name="lbl_question_hoehe_tiefster_punkt">tiefster Punkt im Gelände [m]</string>
    <string name="helper_text_question_hoehe_tiefster_punkt">auf der Luftseite</string>
    <string name="lbl_question_kippungen">Neigungsänderungen, Kippungen</string>
    <string name="lbl_question_lage">Geographische Lage</string>
    <string name="lbl_question_materialaustritt_erd">Materialaustrag durch Sickerwasser</string>
    <string name="lbl_question_messeinrichtungen_funktionsfaehig">Messeinrichtungen funktionsfähig</string>
    <string name="questionnaire_table_title">Ausgefüllte Fragebogen</string>
    <string name="lbl_question_querschnittsreduktion_ga">Querschnittsreduktion im GA (z.B. durch Bewuchs, Sedimente, Einsturz, ...)</string>
    <string name="lbl_question_querschnittsreduktion_hwe">Querschnittsreduktion der Wasserwege (z.B. durch Bewuchs, Sedimente, Einsturz, ...)</string>
    <string name="lbl_question_risse_erd">Risse</string>
    <string name="lbl_question_risse_massiv">Risse</string>
    <string name="lbl_question_rutschungen">Rutschungen</string>
    <string name="lbl_question_schwergaengigkeit_verschluss">Schwergängigkeit oder Blockieren des Verschlusses (falls vorhanden)</string>
    <string name="lbl_question_setzungen_erd">sichtbare Setzungen</string>
    <string name="lbl_question_setzungen_massiv">sichtbare Setzungen</string>
    <string name="lbl_question_uferveraenderungen">Uferveränderungen des Stausees</string>
    <string name="lbl_question_verschiebungen_massiv">sichtbare Horizontalverschiebungen</string>
    <string name="lbl_question_verschiebungen_erd">sichtbare Horizontalverschiebungen</string>
    <string name="lbl_question_visuelle_einschraenkung">Einschränkung der visuellen Inspektionsmöglichkeiten durch Bewuchs auf der luftseitigen Böschung</string>
    <string name="lbl_question_wasseraustritte_erd">Luftseitige Wasseraustritte</string>
    <string name="lbl_question_wasseraustritte_massiv">Luftseitige Wasseraustritte</string>
    <string name="lbl_question_qhwe1">Q<sub><small>HWE</small></sub>(BHW₁) in m³/s</string>
    <string name="lbl_question_qhwe2">Q<sub><small>HWE</small></sub>(BHW₂) in m³/s</string>
    <string name="lbl_question_freibord_uk">Freibord zur UK von Brücken/Stegen (falls vorhanden)</string>
    <string name="lbl_question_freibord_dammkrone">Freibord zur Dammkrone pauschal </string><string name="lbl_question_nachweis_dvwk">Nachweis nach DVWK-Mbl. 246 mit im BF2 um 15% reduzierter Windgeschwindigkeit</string>
    <string name="lbl_question_betriebsauffaelligkeiten">Bisherige Betriebsauffälligkeiten</string>
    <string name="helper_text_betriebsauffaelligkeiten">z.B. Überströmung, Erdbeben, Versagen von Bauteilen, schnelle Stauspiegelsenkung</string>

    <string name="main_title">ZASA - ZustandsAnalyse \n StauAnlagen</string>

    <string name="new_questionnaire">Neuer Fragebogen</string>

    <string name="opt_kleine_stauanlagen">kleine Stauanlagen</string>
    <string name="opt_kleinste_stauanlagen">kleinste Stauanlagen</string>
    <string name="opt_no">Nein</string>
    <string name="opt_sehr_kleine_stauanlagen">sehr kleine Stauanlagen</string>
    <string name="opt_unknown">Unbekannt</string>
    <string name="opt_yes">Ja</string>
    <string name="opt_yes_liegt_vor">Ja, liegt vor</string>
    <string name="opt_no_noch_zu_erstellen">Nein, noch zu erstellen</string>
    <string name="keine_daten_zum_darstellen">Keine Daten zum darstellen</string>
    <string name="wird_momentan_nicht_beachtet">Soll später automatisch berechnet werden, wird momentan nicht beachtet</string>
    <string name="export_button_description">Export-Button</string>
    <string name="delete_button_description">Delete-Button</string>
    <string name="edit_button">Edit-Button</string>
    <string name="delete_stauanlage_message">Wollen Sie den Fragebogen wirklich löschen</string>
    <string name="delete_stauanlage_delete">Löschen</string>
    <string name="delete_Stauanlage_cancel">Abbrechen</string>
    <string name="lbl_question_stauinhalt">Stauinhalt (m³):</string>
    <string name="lbl_question_kronenbreite">Kronenbreite [m]</string>
    <string name="lbl_question_statische_berechnung">Statische Berechnung liegt vor</string>
    <string name="name_der_anlage">Name der Anlage</string>
    <string name="name_der_anlage_helper_text">Die Eingabe einer Arbeitsbezeichnung oder einer lfd. Nr. ist auch möglich</string>
    <string name="name_der_anlage_error_text">Feld muss ausgefüllt sein</string>
    <string name="heading_veraenderungen_erdbauwerke">Veränderungen an Erdbauwerken</string>
    <string name="longitude">Längengrad</string>
    <string name="latitude">Breitengrad</string>
    <string name="postalcode">Postleitzahl</string>
    <string name="ort">Ort</string>
    <string name="strasseNr">Straße Hausnummer</string>
    <string name="heading_bauwerk">Bauwerk</string>
    <string name="einzugsgebiet_der_anlage">Einzugsgebiet der Anlage [km²]</string>
    <string name="hoehenbezugssystem">Höhenbezugssystem</string>
    <string name="lbl_question_bermen_vorhanden">Bermen vorhanden</string>
    <string name="lbl_question_berme_hoehe">Hoehe der Berme [m]</string>
    <string name="lbl_question_berme_breite">Breite der Berme [m]</string>
    <string name="lbl_question_boeschungsneigung_luftseite">Böschungsneigung der Luftseite</string>
    <string name="lbl_question_boeschungsneigung_wasserseite">Böschungsneigung der Wasserseite</string>
    <string name="description_dammoberflaeche_luftseite">Material der Dammoberfläche auf der Luftseite</string>
    <string name="description_dammoberflaeche_wasserseite">Material der Dammoberfläche auf der Wasserseite</string>
    <string name="description_dammoberflaeche_dammkrone">Material der Dammoberfläche auf der Dammkrone</string>
    <string name="lbl_material_rasen">Rasen</string>
    <string name="lbl_material_steinschuettung">Steinschüttung</string>
    <string name="lbl_material_buesche">Büsche</string>
    <string name="lbl_material_baeume">Bäume</string>
    <string name="lbl_material_sonstige">Sonstige</string>
    <string name="lbl_question_dammoberflaeche_luftseite">Aus welchem Material besteht die Dammoberfläche an der <b>Luftseite</b> (Mehrfach Angaben möglich)</string>
    <string name="lbl_question_dammoberflaeche_wasserseite">Aus welchem Material besteht die Dammoberfläche an der <b>Wasserseite</b> (Mehrfach Angaben möglich)</string>
    <string name="lbl_question_dammoberflaeche_dammkrone">Aus welchem Material besteht die Dammoberfläche auf der <b>Dammkrone</b> (Mehrfach Angaben möglich)</string>
    <string name="description_only_manually_Klassifizierung">Klassifizierung der Stauanlage</string>
    <string name="description_klassifizierung_stauanlage_nach_dwa_m522">Klassifizierung der Stauanlage gemäß DWA M522</string>
    <string name="description_differing_manually_Klassifizierung">Klassifizierung der Stauanlage abweichend von DWA M522</string>
    <string name="description_klassifizierung_stauanlage_nach_dwa_m522_extended">Die Stauanlage ist auf Grundlage der Höhe über der Gruendung und dem Stauinhalt gemäß DWA M522 als %1$s klassifiziert</string>
    <string name="question_klassifizierung_without_hoehe_or_stauinhalt">Ohne Angabe der Höhe über der Gründung oder dem Stauinhalt kann die Stauanlage nicht gemäß DWA M522 klassifiziert werden ist Ihnen dennoch die Klassifizierung bekannt?</string>
    <string name="question_klassifizierung_differing_from_computation">Ist Ihnen eine davon abweichende Klassifizierung bekannt?</string>
</resources>
