<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_klassifizierung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_klassifizierung"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"/>

            <RadioGroup
                android:id="@+id/radio_klassifizierung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/question_input_margin_top"
                android:layout_marginRight="@dimen/question_input_margin_right"
                android:layout_marginBottom="@dimen/question_input_margin_bottom">

                <RadioButton
                    android:id="@+id/radio_kleinste_stauanlagen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_kleinste_stauanlagen"
                    android:textSize="@dimen/radio_option_text_size" />

                <RadioButton
                    android:id="@+id/radio_sehr_kleine_stauanlagen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_sehr_kleine_stauanlagen"
                    android:textSize="@dimen/radio_option_text_size" />

                <RadioButton
                    android:id="@+id/radio_kleine_stauanlagen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_kleine_stauanlagen"
                    android:textSize="@dimen/radio_option_text_size" />
            </RadioGroup>

            <!-- TODO So anordnen, dass Button in der Bildschirm-Ecke unten rechts ist -->
            <Button
                android:id="@+id/btn_klassifizierung_weiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/btn_weiter_margin_right"
                android:onClick="oeffneFragebogenTragfaehigkeit"
                android:paddingHorizontal="@dimen/btn_weiter_padding_horizontal"
                android:paddingVertical="@dimen/btn_weiter_padding_vertical"
                android:text="@string/btn_weiter" />




        </LinearLayout>
    </ScrollView>

</LinearLayout>